--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,14 @@ import '../styles/main.css';
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="icon" type="image/x-icon" href="/favicon.ico">
 	<meta name="viewport" content="width=device-width" />
 	<meta name="generator" content={Astro.generator} />
 	<title>V2 - Edit Fearlessly. Collaborate Asynchronously</title>
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 
 	<script src="../scripts/os-detection.js"></script>
 	<script src="../scripts/typewriter.js"></script>
