--- a/src/components/actions/buttons/Button.astro
+++ b/src/components/actions/buttons/Button.astro
@@ -6,9 +6,10 @@ interface Props {
   size?: 'sm' | 'md' | 'lg';
   icon?: string;
   classes?: string;
+  id?: string;
 }
 
-const { text, icon, size = 'md', classes } = Astro.props;
+const { text, icon, size = 'md', classes, id } = Astro.props;
 
 const paddingClasses = {
   sm: 'gap-x-1.5 px-2.5 py-1.5',
@@ -19,7 +20,8 @@ const paddingClasses = {
 
 <button
   type="button"
-  class=`inline-flex items-center justify-center bg-purple-500 text-sm font-semibold text-white shadow-sm hover:bg-purple-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-purple-500 cursor-pointer ${paddingClasses} ${classes ?? ''}`
+  class=`inline-flex items-center justify-center bg-purple-500 text-sm font-semibold text-white shadow-sm hover:bg-purple-500/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-purple-500 cursor-pointer ${paddingClasses} ${classes ?? ''}`
+  id={id}
 >
   {icon && <Icon name={icon} aria-hidden="true" class="-ml-0.5 size-5" />}
   {text}
