--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,9 @@ const {
     />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+
+    <script src="../scripts/os-detection.js"></script>
+    <script src="../scripts/typewriter.js"></script>
   </head>
   <body>
     <slot />
