--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,9 @@
 ---
-import { Image } from 'astro:assets';
-
 import Layout from '../layouts/Layout.astro';
 import NavigationBar from '../components/navigation/NavigationBar.astro';
 import MainContainer from '../components/MainContainer.astro';
 import Footer from '../components/Footer.astro';
-import Button from '../components/actions/buttons/Button.astro';
-import v2Screenshot from '../assets/images/v2-screenshot.png';
+import Hero from './_index-components/Hero.astro';
 ---
 
 <Layout title="v2 Editor">
@@ -14,57 +11,9 @@ import v2Screenshot from '../assets/images/v2-screenshot.png';
     <NavigationBar />
 
     <div class="flex flex-col align-center px-6 gap-10 sm:gap-30 md:gap-40">
-      <div class="flex flex-auto flex-col gap-12 sm:gap-18">
-        <div class="flex flex-col items-center gap-12">
-          <div class="flex flex-col items-center gap-6">
-            <h1
-              class="text-center text-[1.7rem] sm:text-4xl md:text-5xl font-serif"
-            >
-              <span class="typewriter-text" id="typewriter-text"></span>
-              <span
-                class="inline-block bg-purple-500 w-[3px] h-[1.1em] align-text-top typewriter-cursor"
-                id="typewriter-cursor"></span>
-            </h1>
-
-            <p
-              class="text-base/6 sm:text-lg/7 md:text-xl/8 text-center m-0 font-light"
-            >
-              A local-first editor with Git-style version control, true privacy,
-              and complete control over your data
-            </p>
-          </div>
-
-          <a href=`#`
-            ><Button text="Download for macOS" size="lg" id="download-btn" /></a
-          >
-        </div>
-
-        <div class="flex justify-center">
-          <Image
-            src={v2Screenshot}
-            alt="v2 screenshot showing document editing"
-            class="drop-shadow-xl/25"
-          />
-        </div>
-      </div>
+      <Hero />
     </div>
 
     <Footer />
   </MainContainer>
 </Layout>
-
-<style>
-  .typewriter-cursor {
-    animation: blink-caret 1.2s infinite;
-  }
-
-  @keyframes blink-caret {
-    from,
-    to {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-  }
-</style>
