chore: update site description (meta tag)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const {
   title = 'v2 Editor',
-  description = 'Edit Fearlessly, collaborate asynchronously. A local-first editor with Git-style version control, true privacy, and complete control over your data',
+  description = 'Edit fearlessly, collaborate asynchronously. v2 is a local-first rich-text editor with Git-style version control, true privacy, and complete control over your data',
   image = 'https://v2editor.com/v2-1200x630.png',
 } = Astro.props;
 ---
