--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import NavigationBar from '../components/navigation/NavigationBar.astro';
 import MainContainer from '../components/MainContainer.astro';
 import Footer from '../components/Footer.astro';
 import Hero from './_index-components/Hero.astro';
+import VersionControl from './_index-components/VersionControl.astro';
 ---
 
 <Layout title="v2 Editor">
@@ -12,6 +13,7 @@ import Hero from './_index-components/Hero.astro';
 
     <div class="flex flex-col align-center px-6 gap-10 sm:gap-30 md:gap-40">
       <Hero />
+      <VersionControl />
     </div>
 
     <Footer />
