--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@ import oktanaLogo from '../assets/images/oktana-logo.svg';
     </div>
     <div class="flex gap-6">
       <a href="https://oktana.dev">About us</a>
-      <a href="/blog">Blog</a>
+      <a href="https://oktana.dev/blog">Blog</a>
       <a href="mailto:team@oktana.dev">Contact us</a>
     </div>
   </div>
