feat: add technology section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import VersionControl from './_index-components/VersionControl.astro';
 import ContentOverFormatting from './_index-components/ContentOverFormatting.astro';
 import Collaboration from './_index-components/Collaboration.astro';
 import LocalFirst from './_index-components/LocalFirst.astro';
+import Technology from './_index-components/Technology.astro';
 ---
 
 <Layout title="v2 Editor">
@@ -20,6 +21,7 @@ import LocalFirst from './_index-components/LocalFirst.astro';
       <ContentOverFormatting />
       <Collaboration />
       <LocalFirst />
+      <Technology />
     </div>
 
     <Footer />
