fix: update Oktana logo link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@ import oktanaLogo from '../assets/images/oktana-logo.svg';
         </a>
       </div>
       <div class="flex-initial">
-        <a href="/" class="no-underline">
+        <a href="https://oktana.dev" class="no-underline">
           <Image src={oktanaLogo} alt="Oktana" height="32" />
         </a>
       </div>
