chore: update mastodon profile

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import oktanaLogo from '../assets/images/oktana-logo.svg';
     <div class="flex">
       <div class="flex-auto flex gap-5 align-center">
         <a
-          href="https://mastodon.social/@oktana"
+          href="https://mastodon.social/@v2editor"
           class="no-underline text-opacity-90 flex items-center"
         >
           <Icon name="fa-mastodon" aria-hidden="true" class="-ml-0.5 size-5" />
