--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ import oktanaLogo from '../assets/images/oktana-logo.svg';
           <Icon name="fa-mastodon" aria-hidden="true" class="-ml-0.5 size-5" />
         </a>
         <a
-          href="https://github.com/oktana-coop/"
+          href="https://github.com/oktana-coop/v2"
           class="no-underline text-opacity-90 flex items-center"
         >
           <Icon name="fa-github" aria-hidden="true" class="-ml-0.5 size-5" />
