--- a/src/pages/_index-components/Hero.astro
+++ b/src/pages/_index-components/Hero.astro
@@ -27,6 +27,7 @@ import { textClasses } from '../../components/typography/textStyles.ts';
     <div class="flex flex-col sm:flex-row sm:justify-center gap-6">
       <a
         href=`https://github.com/oktana-coop/v2/releases/download/v${latestVersion}/v2-${latestVersion}-universal.dmg`
+        id="download-btn-link"
         ><SolidButton
           text="Download for macOS"
           size="lg"
