chore: use early access in CTA

--- a/src/pages/_index-components/Hero.astro
+++ b/src/pages/_index-components/Hero.astro
@@ -29,7 +29,7 @@ import { textClasses } from '../../components/typography/textStyles.ts';
         href=`https://github.com/oktana-coop/v2/releases/download/v${latestVersion}/v2-${latestVersion}-universal.dmg`
         id="download-btn-link"
         ><SolidButton
-          text="Download for macOS"
+          text="Download for macOS (Early Access)"
           size="lg"
           id="download-btn"
           classes="w-full sm:w-auto"
