--- a/src/components/actions/buttons/OutlineButton.astro
+++ b/src/components/actions/buttons/OutlineButton.astro
@@ -20,9 +20,15 @@ const paddingClasses = {
 
 <button
   type="button"
-  class=`text-sm font-semibold text-purple-500 shadow-sm ring-1 ring-inset ring-purple-500 hover:bg-purple-50 cursor-pointer ${paddingClasses} ${classes ?? ''}`
+  class=`text-sm/6 font-semibold text-purple-500 shadow-sm ring-1 ring-inset ring-purple-500 hover:bg-purple-50 cursor-pointer ${paddingClasses} ${classes ?? ''}`
   id={id}
 >
-  {icon && <Icon name={icon} aria-hidden="true" class="-ml-0.5 size-5" />}
-  {text}
+  {
+    icon && (
+      <span id={id && `${id}-icon`} class="-ml-0.5 size-6 inline-block">
+        <Icon name={icon} aria-hidden="true" class="w-full h-full" />
+      </span>
+    )
+  }
+  <span id={id && `${id}-text`}>{text}</span>
 </button>
