--- a/src/components/actions/buttons/SolidButton.astro
+++ b/src/components/actions/buttons/SolidButton.astro
@@ -20,9 +20,15 @@ const paddingClasses = {
 
 <button
   type="button"
-  class=`inline-flex items-center justify-center bg-purple-500 text-sm font-semibold text-white shadow-sm hover:bg-purple-500/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-purple-500 cursor-pointer ${paddingClasses} ${classes ?? ''}`
+  class=`inline-flex items-center justify-center bg-purple-500 text-sm/6 font-semibold text-white shadow-sm hover:bg-purple-500/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-purple-500 cursor-pointer ${paddingClasses} ${classes ?? ''}`
   id={id}
 >
-  {icon && <Icon name={icon} aria-hidden="true" class="-ml-0.5 size-5" />}
-  {text}
+  {
+    icon && (
+      <span id={id && `${id}-icon`} class="-ml-0.5 size-6 inline-block">
+        <Icon name={icon} aria-hidden="true" class="w-full h-full" />
+      </span>
+    )
+  }
+  <span id={id && `${id}-text`}>{text}</span>
 </button>
