--- a/src/pages/_index-components/Collaboration.astro
+++ b/src/pages/_index-components/Collaboration.astro
@@ -5,6 +5,7 @@ import SectionHeading from '../../components/typography/SectionHeading.astro';
 import screenshot from '../../assets/images/v2-screenshot-collaboration.png';
 import { textClasses } from '../../components/typography/textStyles.ts';
 import BulletList from '../../components/typography/BulletList.astro';
+import StatusBadge from '../../components/StatusBadge.astro';
 ---
 
 <div class="flex flex-col lg:flex-row lg:justify-between gap-10">
@@ -18,7 +19,11 @@ import BulletList from '../../components/typography/BulletList.astro';
   <div
     class="w-full lg:w-1/2 lg:max-w-lg flex flex-col gap-4 justify-center align-end"
   >
-    <SectionHeading text="Collaboration" />
+    <div class="flex items-center gap-4">
+      <SectionHeading text="Collaboration" />
+      <StatusBadge text="Coming Soon" />
+    </div>
+
     <div class="block lg:hidden w-full lg:w-1/2 flex justify-center">
       <Image
         src={screenshot}
