feat: add download page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,4 +81,13 @@ const {
     margin: 0;
     background-color: #f6f5f1;
   }
+
+  @keyframes blink-caret {
+    from, to {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
 </style>
