--- a/src/components/navigation/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 import v2Logo from '../../assets/images/v2-logo-light.svg';
 ---
 
-<nav class="flex flex-initial justify-center items-center px-0 py-4 sm:py-6">
+<nav class="flex justify-center items-center px-0 py-4 sm:py-6">
   <a href="/" class="no-underline">
     <Image src={v2Logo} alt="v2" height="88" class="h-[64px] sm:h-[88px]" />
   </a>
