--- a/src/pages/_index-components/Hero.astro
+++ b/src/pages/_index-components/Hero.astro
@@ -26,18 +26,25 @@ import { textClasses } from '../../components/typography/textStyles.ts';
     </div>
 
     <div class="flex flex-col sm:flex-row sm:justify-center gap-6">
-      <a
-        href=`https://github.com/oktana-coop/v2/releases/download/v${latestVersion}/v2-${latestVersion}-universal.dmg`
-        id="download-btn-link"
-      >
-        <SolidButton
-          icon="fa-apple"
-          text="Download for macOS (Early Access)"
-          size="lg"
-          id="download-btn"
-          classes="w-full sm:w-auto"
-        /></a
-      >
+      <div class="flex flex-col items-center gap-2">
+        <a
+          href=`https://github.com/oktana-coop/v2/releases/download/v${latestVersion}/v2-${latestVersion}-universal.dmg`
+          id="download-btn-link"
+        >
+          <SolidButton
+            icon="fa-apple"
+            text="Download for macOS (Early Access)"
+            size="lg"
+            id="download-btn"
+            classes="w-full sm:w-auto"
+          /></a
+        >
+        <p class="text-sm text-gray-500">
+          <a href="/downloads" class="text-purple-500 hover:text-purple-600">
+            More platforms
+          </a>
+        </p>
+      </div>
       <a
         href="https://oktana.dev/blog/introducing-v2-editor"
         target="_blank"
