--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,3 +27,5 @@ import Technology from './_index-components/Technology.astro';
     <Footer />
   </MainContainer>
 </Layout>
+
+<script src="../scripts/typewriter.js"></script>
