--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,4 @@
 ---
-import { getLatestVersion } from '../lib/github';
-
 interface Props {
   title: string;
   description?: string;
@@ -12,8 +10,6 @@ const {
   description = 'Edit fearlessly, collaborate asynchronously. v2 is a local-first rich-text editor with Git-style version control, true privacy, and complete control over your data',
   image = 'https://v2editor.com/v2-1200x630.png',
 } = Astro.props;
-
-const latestVersion = await getLatestVersion();
 ---
 
 <!doctype html>
@@ -50,9 +46,8 @@ const latestVersion = await getLatestVersion();
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
-    <script src="../scripts/os-detection.js"></script>
   </head>
-  <body data-v2-version={latestVersion}>
+  <body>
     <slot />
   </body>
 </html>
