--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import NavigationBar from '../components/navigation/NavigationBar.astro';
 import MainContainer from '../components/MainContainer.astro';
 import Footer from '../components/Footer.astro';
-import { getLatestVersion } from '../lib/github';
 import Hero from './_index-components/Hero.astro';
 import VersionControl from './_index-components/VersionControl.astro';
 import ContentOverFormatting from './_index-components/ContentOverFormatting.astro';
 import Collaboration from './_index-components/Collaboration.astro';
 import LocalFirst from './_index-components/LocalFirst.astro';
 import Technology from './_index-components/Technology.astro';
-
-const latestVersion = await getLatestVersion();
 ---
 
 <Layout title="v2 Editor">
@@ -19,7 +16,7 @@ const latestVersion = await getLatestVersion();
     <NavigationBar />
 
     <div class="flex flex-col align-center px-6 gap-20 sm:gap-30 lg:gap-50">
-      <Hero latestVersion={latestVersion} />
+      <Hero />
       <VersionControl />
       <ContentOverFormatting />
       <Collaboration />
