--- a/src/pages/downloads.astro
+++ b/src/pages/downloads.astro
@@ -23,7 +23,7 @@ const downloads = [
     category: "Windows", 
     icon: "fa-windows",
     items: [
-      { name: "Installer", file: `v2.Setup.${latestVersion}.exe` }
+      { name: "Installer", file: `v2-Setup-${latestVersion}.exe` }
     ]
   },
   {
