--- a/src/pages/_index-components/Hero.astro
+++ b/src/pages/_index-components/Hero.astro
@@ -59,4 +59,13 @@ import { textClasses } from '../../components/typography/textStyles.ts';
   .typewriter-cursor {
     animation: blink-caret 1.2s infinite;
   }
+
+  @keyframes blink-caret {
+    from, to {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
 </style>
