feat: add newsletter form and subscription management

--- a/src/components/actions/buttons/SolidButton.astro
+++ b/src/components/actions/buttons/SolidButton.astro
@@ -6,10 +6,11 @@ interface Props {
   size?: 'sm' | 'md' | 'lg';
   icon?: string;
   classes?: string;
+  type?: 'button' | 'reset' | 'submit';
   id?: string;
 }
 
-const { text, icon, size = 'md', classes, id } = Astro.props;
+const { text, icon, size = 'md', classes, type = 'button', id } = Astro.props;
 
 const paddingClasses = {
   sm: 'gap-x-1.5 px-2.5 py-1.5',
@@ -19,7 +20,7 @@ const paddingClasses = {
 ---
 
 <button
-  type="button"
+  type={type}
   class=`inline-flex items-center justify-center bg-purple-500 text-sm/6 font-semibold text-white shadow-sm hover:bg-purple-500/80 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-purple-500 cursor-pointer ${paddingClasses} ${classes ?? ''}`
   id={id}
 >
