--- a/src/components/actions/buttons/OutlineButton.astro
+++ b/src/components/actions/buttons/OutlineButton.astro
@@ -6,10 +6,11 @@ interface Props {
   size?: 'sm' | 'md' | 'lg';
   icon?: string;
   classes?: string;
+  type?: 'button' | 'reset' | 'submit';
   id?: string;
 }
 
-const { text, icon, size = 'md', classes, id } = Astro.props;
+const { text, icon, size = 'md', classes, type = 'button', id } = Astro.props;
 
 const paddingClasses = {
   sm: 'gap-x-1.5 px-2.5 py-1.5',
@@ -19,7 +20,7 @@ const paddingClasses = {
 ---
 
 <button
-  type="button"
+  type={type}
   class=`text-sm/6 font-semibold text-purple-500 shadow-sm ring-1 ring-inset ring-purple-500 hover:bg-purple-50 cursor-pointer ${paddingClasses} ${classes ?? ''}`
   id={id}
 >
