--- a/src/pages/_index-components/Technology.astro
+++ b/src/pages/_index-components/Technology.astro
@@ -3,6 +3,7 @@ import { Image } from 'astro:assets';
 
 import SectionHeading from '../../components/typography/SectionHeading.astro';
 import automergeLogo from '../../assets/images/automerge.png';
+import gitLogo from '../../assets/images/git.png';
 import pandocLogo from '../../assets/images/pandoc.png';
 import prosemirrorLogo from '../../assets/images/prosemirror.png';
 import { textClasses } from '../../components/typography/textStyles.ts';
@@ -14,6 +15,13 @@ const technologies = [
     logo: automergeLogo,
     description:
       'Cutting-edge CRDT technology powering version control & async collaboration',
+  },
+  {
+    name: 'Git',
+    url: 'https://git-scm.com/',
+    logo: gitLogo,
+    description:
+      'Battle-tested version control system trusted by millions of developers worldwide',
   },
   {
     name: 'Pandoc',
@@ -47,7 +55,7 @@ const technologies = [
   >
     {
       technologies.map((tech) => (
-        <div class="flex flex-col lg:w-1/3 max-w-2xs items-center gap-4 lg:gap-6">
+        <div class="flex flex-col lg:w-1/2 max-w-2xs items-center gap-4 lg:gap-6">
           <a href={tech.url} target="_blank" rel="noopener">
             <h3 class="font-sans text-lg font-bold text-center">{tech.name}</h3>
           </a>
