feat: implement comparison table

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Footer from '../components/Footer.astro';
 import Hero from './_index-components/Hero.astro';
 import VersionControl from './_index-components/VersionControl.astro';
 import ContentOverFormatting from './_index-components/ContentOverFormatting.astro';
+import ComparisonTable from './_index-components/ComparisonTable.astro';
 import Collaboration from './_index-components/Collaboration.astro';
 import LocalFirst from './_index-components/LocalFirst.astro';
 import Technology from './_index-components/Technology.astro';
@@ -21,6 +22,7 @@ import Technology from './_index-components/Technology.astro';
       <ContentOverFormatting />
       <Collaboration />
       <LocalFirst />
+      <ComparisonTable />
       <Technology />
     </div>
 
