chore: update Linux filenames

--- a/src/pages/downloads.astro
+++ b/src/pages/downloads.astro
@@ -29,14 +29,14 @@ const downloads = [
   },
   {
     category: "Linux",
-    icon: "fa-linux", 
+    icon: "fa-linux",
     assets: [
-      { name: "AppImage", file: `v2-${DEFAULT_VERSION}.AppImage`, recommended: true },
+      { name: "AppImage", file: `v2-${DEFAULT_VERSION}-x86_64.AppImage`, recommended: true },
       { name: "AppImage (ARM64)", file: `v2-${DEFAULT_VERSION}-arm64.AppImage` },
-      { name: "Deb", file: `v2_${DEFAULT_VERSION}_amd64.deb` },
-      { name: "Deb (ARM64)", file: `v2_${DEFAULT_VERSION}_arm64.deb` },
-      { name: "RPM", file: `v2-${DEFAULT_VERSION}.x86_64.rpm` },
-      { name: "RPM (ARM64)", file: `v2-${DEFAULT_VERSION}.aarch64.rpm` }
+      { name: "Deb", file: `v2-${DEFAULT_VERSION}-amd64.deb` },
+      { name: "Deb (ARM64)", file: `v2-${DEFAULT_VERSION}-arm64.deb` },
+      { name: "RPM", file: `v2-${DEFAULT_VERSION}-x86_64.rpm` },
+      { name: "RPM (ARM64)", file: `v2-${DEFAULT_VERSION}-aarch64.rpm` }
     ]
   }
 ];
